[package]
name = "timer-dnd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "timer-dnd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
macro_rules_attribute = "0.2.0"
smol = "2.0.2"
smol-macros = "0.1.1"
macos-focus-mode = { path = "../macos-focus-mode-rs" }
